--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@material-ui/core": "^4.2.1",
     "lodash": "^4.17.15",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.9.0-rc.0",
+    "react-dom": "^16.9.0-rc.0",
     "react-scripts": "3.0.1",
     "typeface-roboto": "^0.0.75"
   },
